--- a/App.xaml
+++ b/App.xaml
@@ -1,13 +1,15 @@
 ﻿<Application x:Class="Vidiya.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              xmlns:local="clr-namespace:Vidiya"
-             StartupUri="Windows/SetupWindow.xaml"
+             StartupUri="Windows/MainWindow.xaml"
              >
     <Application.Resources>
         <BitmapImage x:Key="Vidiya_Icon" UriSource="Assets/Images/Vidiya_Icon.png" />
         <BitmapImage x:Key="Vidiya_Logo" UriSource="Assets/Images/Vidiya_Logo.png" />
         <BitmapImage x:Key="Vidiya_Banner" UriSource="Assets/Images/Vidiya_Banner.png" />
         <BitmapImage x:Key="Vidiya_Splashscreen" UriSource="Assets/Images/Vidiya_Splashscreen.png" />
+        <BitmapImage x:Key="SidePanel_Logo" UriSource="Assets/Images/SidePanel_Logo.jpg" />
     </Application.Resources>
 </Application>
