--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,48 +1,23 @@
-﻿<Window x:Class="Vidiya.MainWindow"
+﻿<Window xmlns:Elements="clr-namespace:Vidiya.Elements"  x:Class="Vidiya.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Vidiya"
+        xmlns:local="clr-namespace:Vidiya.Windows"
         mc:Ignorable="d"
-        Title="Vidiya" Height="1000"
-        Background="#024D71" Width="1878"
-        WindowStartupLocation="CenterScreen"
-        Closed="MainWindow_Closed"
-        Loaded="MainWindow_Loaded"
-        Icon="{StaticResource Vidiya_Icon}"
-        x:Name="window"
-        WindowState="Maximized">
+        Title="MainWindow"
+        Height="1080" Width="1920"
+        ResizeMode="CanMinimize">
     <Grid>
-        <Image x:Name="logo" Panel.ZIndex="0" Height="360" Margin="0,0,0,0" Width="640" Source="{StaticResource Vidiya_Logo}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="480px"/>
+            <ColumnDefinition Width="3px"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
 
-
-        <StackPanel Grid.Row="1" Panel.ZIndex="2" Grid.Column="1">
-            <Button x:Name="ContentButton" Panel.ZIndex="2" Content="Content" HorizontalAlignment="Left" Margin="50,50,50,5" VerticalAlignment="Top" Width="300" Height="50" Click="ContentButton_Click" FontSize="22"/>
-        </StackPanel>
-
-        <StackPanel Grid.Row="1" Panel.ZIndex="2" Grid.Column="2">
-            <Label Name="statusLabel" Content="Not playing..." HorizontalContentAlignment="Center" Margin="5"  FontSize="28"/>
-            <WrapPanel HorizontalAlignment="Center">
-                <Button x:Name="playButton" Margin="5,0" Click="PlayButton_Click" FontSize="28">Play</Button>
-                <Button x:Name="pauseButton" Margin="5,0" Click="PauseButton_Click" FontSize="28">Pause</Button>
-                <Button x:Name="stopButton"  Margin="5,0" Click="StopButton_Click" FontSize="28">Stop</Button>
-                <Button x:Name="syncButton" Margin="5,0" Click="SyncButton_Click" FontSize="28">Sync</Button>
-                <Button x:Name="skipButton" Margin="5,0" Click="SkipButton_Click" FontSize="28">Skip</Button>
-            </WrapPanel>
-            <WrapPanel HorizontalAlignment="Center">
-                <TextBlock TextAlignment="Center" FontSize="20" Height="28" Margin="5" Background="#dddddd">🔉</TextBlock>
-                <Slider x:Name="volumeSlider" Margin="0,20" Width="250" ValueChanged="volumeSlider_ValueChanged" Maximum="1" SmallChange="0.01" Value="0.2"/>
-                <TextBlock TextAlignment="Center" FontSize="20" Height="28" Margin="5" Background="#dddddd">🔊</TextBlock>
-            </WrapPanel>
-        </StackPanel>
-
-        <StackPanel Grid.Row="1" Panel.ZIndex="2" Grid.Column="3">
-            <Button x:Name="NewDisplayButton" Panel.ZIndex="2" Content="New Display Window" HorizontalAlignment="Right" Margin="50,50,50,50" VerticalAlignment="Top" Width="300" Height="50" Click="NewDisplayButton_Click" FontSize="22"/>
-        </StackPanel>
-
-        <Viewbox Stretch="Uniform" Panel.ZIndex="1">
-            <MediaElement x:Name="mediaElement" Stretch="Fill" LoadedBehavior="Manual" UnloadedBehavior="Close" Loaded="mediaElement_Loaded" Unloaded="mediaElement_Unloaded" MediaEnded="mediaElement_MediaEnded"/>
-        </Viewbox>
+        
+        <Rectangle Grid.Column="1" Fill="#FFFFFF"/>
+        <Elements:SidePanel Grid.Column="0"/>
+        <Elements:BigPanel Grid.Column="2"/>
     </Grid>
 </Window>
