--- a/Elements/SecondaryMediaControl.xaml
+++ b/Elements/SecondaryMediaControl.xaml
@@ -7,23 +7,101 @@
              mc:Ignorable="d" 
              d:DesignHeight="48.6" d:DesignWidth="330">
     <UserControl.Resources>
-        <!-- This style is used for buttons, to remove the WPF default 'animated' mouse over effect -->
-        <Style x:Key="MyButtonStyle" TargetType="Button">
-            <Setter Property="OverridesDefaultStyle" Value="True"/>
-            <Setter Property="Margin" Value="5"/>
+        <Style x:Key="VidiyaButton" TargetType="Button">
+
+            <Setter Property="Background" Value="#00000000"/>
+            <Setter Property="BorderBrush" Value="#00000000"/>
+            <Setter Property="Foreground" Value="#00000000"/>
+
+            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Margin" Value="0"/>
+
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
+                        <Grid Name="Grid">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Grid>
+
+
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Grid" Property="Opacity" Value="0.8" />
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
-    </UserControl.Resources>
 
+        <Style x:Key="VidiyaSliderThumb" TargetType="Thumb">
+            <Setter Property="SnapsToDevicePixels" Value="true"/>
+            <Setter Property="OverridesDefaultStyle" Value="false"/>
+            <Setter Property="Height" Value="18"/>
+            <Setter Property="Width" Value="18"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Thumb">
+                        <Ellipse Name="Ellipse" Fill="#8CADB4" />
+                        
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="Ellipse" Property="Opacity" Value="0.8"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="VidiyaStyle" TargetType="Slider">
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Slider">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="auto" Name="row" />
+                                <RowDefinition Height="auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto" />
+                                <ColumnDefinition Width="*" Name="column" />
+                                <ColumnDefinition Width="auto" />
+                            </Grid.ColumnDefinitions>
+                            <Border Name="PART_Border" 
+                                    Padding="2"
+                                    Grid.Row="1" Grid.Column="1"
+                                    Width="{TemplateBinding Width}"
+                                    Height="{TemplateBinding Height}"
+                                    Background="#8CADB4"
+                                    HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Center"/>
+                            <Track Name="PART_Track"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Center"
+                                  Grid.Row="1" Grid.Column="1"
+                                  Width="{TemplateBinding Width}"
+                                  Height="{TemplateBinding Height}">
+                                <Track.Thumb>
+                                    <Thumb Style="{StaticResource VidiyaSliderThumb}" />
+                                </Track.Thumb>
+                            </Track>
+                        </Grid>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="PART_Border" Property="Opacity" Value="0.8"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+
+        </Style>
+    </UserControl.Resources>
+    
     <Grid>
 
         <Grid>
@@ -52,28 +130,32 @@
                 <ColumnDefinition Width="14"/>
             </Grid.ColumnDefinitions>
 
-
-            <Button x:Name="VolumeButton" Click="VolumeButton_Click" Grid.Column="2" Margin="3" Padding="0" Background="#00000000" BorderBrush="#00000000" Foreground="#00000000">
-                <materialIcons:MaterialIcon x:Name="VolumeIcon" Kind="VolumeHigh" Grid.Column="2" Foreground="#8CADB4" Margin="0" Padding="0"/>
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Button.Style>
+            <Button x:Name="VolumeButton" Style="{StaticResource VidiyaButton}" Click="VolumeButton_Click" Grid.Column="2">
+                <Grid>
+                    <Ellipse Fill="#002A3D"/>
+                    <materialIcons:MaterialIcon x:Name="VolumeIcon" Kind="VolumeHigh" Grid.Column="2" Foreground="#8CADB4" Margin="2" Padding="0"/>
+                </Grid>
             </Button>
-            
-            <Slider Grid.Column="4" VerticalAlignment="Center" HorizontalContentAlignment="Center"/>
-            
-            <materialIcons:MaterialIcon Kind="Qrcode" Grid.Column="6" Foreground="#8CADB4" Margin="3"/>
-            
-            <materialIcons:MaterialIcon Kind="ApplicationOutline" Grid.Column="8" Foreground="#8CADB4" Margin="3"/>
-            <materialIcons:MaterialIcon Kind="Plus" Grid.Column="8" Foreground="#8CADB4" Margin="10,12,10,8"/>
+
+            <Slider x:Name="VolumeSlider" Grid.Column="4" ValueChanged="VolumeSlider_ValueChanged" Minimum="0" Maximum="1" VerticalAlignment="Center" Style="{StaticResource VidiyaStyle}" SmallChange="0.2" TickFrequency="0.2" Value="0.3" />
+
+
+
+            <Button x:Name="QrCodeButton" Style="{StaticResource VidiyaButton}" Click="VolumeButton_Click" Grid.Column="6">
+                <Grid>
+                    <Ellipse Fill="#002A3D"/>
+                    <materialIcons:MaterialIcon Kind="Qrcode" Foreground="#8CADB4" Margin="3"/>
+                </Grid>
+            </Button>
+
+
+            <Button x:Name="WindowButton" Style="{StaticResource VidiyaButton}" Click="VolumeButton_Click" Grid.Column="8">
+                <Grid>
+                    <Ellipse Fill="#002A3D"/>
+                    <materialIcons:MaterialIcon Kind="Plus" Foreground="#8CADB4" Margin="10,12,10,8"/>
+                    <materialIcons:MaterialIcon Kind="ApplicationOutline" Foreground="#8CADB4" Margin="3"/>
+                </Grid>
+            </Button>
         </Grid>
     </Grid>
 </UserControl>
