--- a/Elements/BigPanel.xaml
+++ b/Elements/BigPanel.xaml
@@ -21,9 +21,12 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
+            <Viewbox Stretch="Uniform"
+                     Grid.Column="0" Grid.ColumnSpan="3"
+                     Grid.Row="0" Grid.RowSpan="3">
+                <MediaElement Name="Media" Loaded="Media_Loaded"/>
+            </Viewbox>
             <local:SecondaryMediaControl Grid.Column="1" Grid.Row="1"/>
-            <MediaElement/>
-            
         </Grid>
 
     </Grid>
