--- a/Elements/SecondaryMediaControl.xaml
+++ b/Elements/SecondaryMediaControl.xaml
@@ -6,101 +6,6 @@
              xmlns:local="clr-namespace:Vidiya.Elements" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="48.6" d:DesignWidth="330">
-    <UserControl.Resources>
-        <Style x:Key="VidiyaButton" TargetType="Button">
-
-            <Setter Property="Background" Value="#00000000"/>
-            <Setter Property="BorderBrush" Value="#00000000"/>
-            <Setter Property="Foreground" Value="#00000000"/>
-
-            <Setter Property="Padding" Value="0"/>
-            <Setter Property="Margin" Value="0"/>
-
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Grid Name="Grid">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </Grid>
-
-
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="Grid" Property="Opacity" Value="0.8" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="VidiyaSliderThumb" TargetType="Thumb">
-            <Setter Property="SnapsToDevicePixels" Value="true"/>
-            <Setter Property="OverridesDefaultStyle" Value="false"/>
-            <Setter Property="Height" Value="18"/>
-            <Setter Property="Width" Value="18"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Thumb">
-                        <Ellipse Name="Ellipse" Fill="#8CADB4" />
-                        
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="Ellipse" Property="Opacity" Value="0.8"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-
-        <Style x:Key="VidiyaStyle" TargetType="Slider">
-            <Setter Property="OverridesDefaultStyle" Value="true"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Slider">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="auto" />
-                                <RowDefinition Height="auto" Name="row" />
-                                <RowDefinition Height="auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="auto" />
-                                <ColumnDefinition Width="*" Name="column" />
-                                <ColumnDefinition Width="auto" />
-                            </Grid.ColumnDefinitions>
-                            <Border Name="PART_Border" 
-                                    Padding="2"
-                                    Grid.Row="1" Grid.Column="1"
-                                    Width="{TemplateBinding Width}"
-                                    Height="{TemplateBinding Height}"
-                                    Background="#8CADB4"
-                                    HorizontalAlignment="Stretch"
-                                    VerticalAlignment="Center"/>
-                            <Track Name="PART_Track"
-                                  HorizontalAlignment="Stretch"
-                                  VerticalAlignment="Center"
-                                  Grid.Row="1" Grid.Column="1"
-                                  Width="{TemplateBinding Width}"
-                                  Height="{TemplateBinding Height}">
-                                <Track.Thumb>
-                                    <Thumb Style="{StaticResource VidiyaSliderThumb}" />
-                                </Track.Thumb>
-                            </Track>
-                        </Grid>
-
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter TargetName="PART_Border" Property="Opacity" Value="0.8"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-
-        </Style>
-    </UserControl.Resources>
     
     <Grid>
 
@@ -141,7 +46,7 @@
 
 
 
-            <Button x:Name="QrCodeButton" Style="{StaticResource VidiyaButton}" Click="VolumeButton_Click" Grid.Column="6">
+            <Button x:Name="QrCodeButton" Style="{StaticResource VidiyaButton}" Click="QrCodeButton_Click" Grid.Column="6">
                 <Grid>
                     <Ellipse Fill="#002A3D"/>
                     <materialIcons:MaterialIcon Kind="Qrcode" Foreground="#8CADB4" Margin="3"/>
@@ -149,7 +54,7 @@
             </Button>
 
 
-            <Button x:Name="WindowButton" Style="{StaticResource VidiyaButton}" Click="VolumeButton_Click" Grid.Column="8">
+            <Button x:Name="WindowButton" Style="{StaticResource VidiyaButton}" Click="WindowButton_Click" Grid.Column="8">
                 <Grid>
                     <Ellipse Fill="#002A3D"/>
                     <materialIcons:MaterialIcon Kind="Plus" Foreground="#8CADB4" Margin="10,12,10,8"/>
