--- a/Elements/MediaControls/PrimaryMediaControls.xaml
+++ b/Elements/MediaControls/PrimaryMediaControls.xaml
@@ -1,22 +1,14 @@
-﻿<UserControl x:Class="Vidiya.Elements.MediaControls"
+﻿<UserControl xmlns:Generics="clr-namespace:Vidiya.Elements.Generics"  x:Class="Vidiya.Elements.MediaControls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Vidiya.Elements" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             xmlns:local="clr-namespace:Vidiya.Elements"
              mc:Ignorable="d" 
              d:DesignHeight="48.6" d:DesignWidth="450">
-    <Grid>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="48.6px"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="48.6px"/>
-            </Grid.ColumnDefinitions>
-            <Border Grid.Column="0" BorderThickness="3,3,3,3" BorderBrush="#8CADB4" CornerRadius="59" Background="#002A3D"/>
-            <Border Grid.Column="2" BorderThickness="3" BorderBrush="#8CADB4" CornerRadius="59" Background="#002A3D"/>
-            <Border Grid.Column="1" BorderThickness="0,3,0,3" BorderBrush="#8CADB4" Margin="-24.3,0" Background="#002A3D"/>
-        </Grid>
+    <Grid x:Name="grid">
+        <Generics:VidiyaRect/>
 
         <Grid Margin="0,4.3">
             <Grid.ColumnDefinitions>
