--- a/Elements/Menus/MainMenu.xaml
+++ b/Elements/Menus/MainMenu.xaml
@@ -4,33 +4,16 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Vidiya.Elements" xmlns:sys="clr-namespace:System;assembly=netstandard" 
-             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" xmlns:Generics="clr-namespace:Vidiya.Elements.Generics"
              mc:Ignorable="d" 
              d:DesignHeight="1080" d:DesignWidth="480">
 
     <Grid>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="48.6px"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="48.6px"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="48.6px"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="48.6px"/>
-            </Grid.RowDefinitions>
-            <Border Grid.Column="0" Grid.Row="2" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="2" Grid.Row="2" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
+        <Generics:VidiyaRect/>
 
-            <Border Grid.Column="1" Grid.Row="0" BorderThickness="0,3" BorderBrush="#8CADB4" Background="#002A3D" Grid.RowSpan="4" Margin="-24.3,0"/>
-            <Border Grid.Column="0" Grid.Row="1" BorderThickness="3,0" BorderBrush="#8CADB4" Background="#002A3D" Grid.ColumnSpan="4" Margin="0,-24.3"/>
-            <Border Grid.Column="0" Grid.Row="0" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="2" Grid.Row="0" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="1" Grid.Row="0" BorderThickness="0,3" BorderBrush="#8CADB4" Background="#002A3D" Margin="-24.3,0" />
-        </Grid>
-
+        <Generics:VidiyaRect Height="48.6" VerticalAlignment="Top"/>
+        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="48.6px"/>
