--- a/Elements/Menus/QueueMenu.xaml
+++ b/Elements/Menus/QueueMenu.xaml
@@ -1,35 +1,17 @@
-﻿<UserControl x:Class="Vidiya.Elements.Menus.QueueMenu"
+﻿<UserControl xmlns:YouTube="clr-namespace:Vidiya.Elements.Content.YouTube"  x:Class="Vidiya.Elements.Menus.QueueMenu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Vidiya.Elements.Menus" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             xmlns:local="clr-namespace:Vidiya.Elements.Menus" xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" xmlns:Generics="clr-namespace:Vidiya.Elements.Generics"
              mc:Ignorable="d" 
              d:DesignHeight="1080" d:DesignWidth="480">
 
 
     <Grid>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="48.6px"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="48.6px"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="48.6px"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="48.6px"/>
-            </Grid.RowDefinitions>
-            <Border Grid.Column="0" Grid.Row="2" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="2" Grid.Row="2" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-
-            <Border Grid.Column="1" Grid.Row="0" BorderThickness="0,3" BorderBrush="#8CADB4" Background="#002A3D" Grid.RowSpan="4" Margin="-24.3,0"/>
-            <Border Grid.Column="0" Grid.Row="1" BorderThickness="3,0" BorderBrush="#8CADB4" Background="#002A3D" Grid.ColumnSpan="4" Margin="0,-24.3"/>
-            <Border Grid.Column="0" Grid.Row="0" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="2" Grid.Row="0" BorderThickness="3,3" BorderBrush="#8CADB4" Background="#002A3D" CornerRadius="59"/>
-            <Border Grid.Column="1" Grid.Row="0" BorderThickness="0,3" BorderBrush="#8CADB4" Background="#002A3D" Margin="-24.3,0" />
-        </Grid>
+        <Generics:VidiyaRect/>
+        <Generics:VidiyaRect Height="48.6" VerticalAlignment="Top"/>
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -54,12 +36,15 @@
                     <materialIcons:MaterialIcon Kind="KeyboardReturn" Foreground="#8CADB4" Margin="3"/>
                 </Grid>
             </Button>
-            
-            <TextBlock Grid.Column="1" Grid.Row="1" Margin="0,40">
 
-                Queue
-
-            </TextBlock>
+            <ScrollViewer x:Name="ContentScroll" Grid.Column="1" Grid.Row="1" Margin="0,40" VerticalScrollBarVisibility="Auto">
+                <StackPanel x:Name="ContentView"
+                            Width="{Binding ActualWidth, ElementName=ContentScroll, Mode=OneWay}"
+                            Height="{Binding ActualHeight, ElementName=ContentScroll, Mode=OneWay}" 
+                            SizeChanged="ContentView_SizeChanged">
+                    
+                </StackPanel>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </UserControl>
