--- a/Elements/MediaControls/PrimaryMediaControls.xaml
+++ b/Elements/MediaControls/PrimaryMediaControls.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl xmlns:Generics="clr-namespace:Vidiya.Elements.Generics"  x:Class="Vidiya.Elements.MediaControls"
+﻿<UserControl x:Class="Vidiya.Elements.MediaControls.PrimaryMediaControls"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
-             xmlns:local="clr-namespace:Vidiya.Elements"
+             xmlns:materialIcons="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF" 
+             xmlns:generics="clr-namespace:Vidiya.Elements.Generics"
              mc:Ignorable="d" 
              d:DesignHeight="48.6" d:DesignWidth="450">
     <Grid x:Name="grid">
-        <Generics:VidiyaRect/>
+        <generics:VidiyaRect/>
 
         <Grid Margin="0,4.3">
             <Grid.ColumnDefinitions>
