--- a/Elements/MediaControls/SecondaryMediaControl.xaml
+++ b/Elements/MediaControls/SecondaryMediaControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Vidiya.Elements.SecondaryMediaControl"
+﻿<UserControl x:Class="Vidiya.Elements.MediaControl.SecondaryMediaControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
