--- a/Elements/Menus/MainMenu.xaml
+++ b/Elements/Menus/MainMenu.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Vidiya.Elements.MainMenu"
+﻿<UserControl x:Class="Vidiya.Elements.Menus.MainMenu"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
