--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -1,14 +1,16 @@
-﻿<Window xmlns:Elements="clr-namespace:Vidiya.Elements"  x:Class="Vidiya.Windows.MainWindow"
+﻿<Window x:Class="Vidiya.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Vidiya.Windows"
+        xmlns:panels="clr-namespace:Vidiya.Elements.Panels"
         mc:Ignorable="d"
         Title="Vidiya"
         Height="1080" Width="1920"
         Loaded="Window_Loaded"
-        Unloaded="Window_Unloaded">
+        Unloaded="Window_Unloaded"
+        WindowStartupLocation="CenterScreen"
+        WindowState="Maximized">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -18,7 +20,7 @@
 
         
         <Rectangle Grid.Column="1" Fill="#FFFFFF"/>
-        <Elements:SidePanel Grid.Column="0"/>
-        <Elements:BigPanel Grid.Column="2"/>
+        <panels:SidePanel Grid.Column="0"/>
+        <panels:BigPanel Grid.Column="2"/>
     </Grid>
 </Window>
